--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "jest-cli": "26.6.3",
     "lost": "8.3.1",
     "postcss-pxtorem": "5.1.1",
+    "prettier": "2.3.2",
     "react-test-renderer": "17.0.2",
     "rimraf": "3.0.2",
     "sass": "^1.34.1",
