--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "netlify-cms-app": "^2.15.19",
     "node-sass": "^6.0.0",
     "normalize-scss": "^7.0.1",
+    "prettier": "^2.3.2",
     "prismjs": "^1.23.0",
     "react": "^17.0.2",
     "react-disqus-comments": "^1.4.0",
@@ -111,7 +112,6 @@
     "jest-cli": "26.6.3",
     "lost": "8.3.1",
     "postcss-pxtorem": "5.1.1",
-    "prettier": "2.3.2",
     "react-test-renderer": "17.0.2",
     "rimraf": "3.0.2",
     "sass": "^1.34.1",
